--- a/program.html
+++ b/program.html
@@ -5,7 +5,7 @@
        <title>Draw</title>
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-       <link rel="stylesheet" href="src/scss/main.scss">
+       <link rel="stylesheet" href="dist/css/main.min.css">
     </head>
     <body>
       <div class="wrapper">
